Spring AI and test, also added important information in README
Signed-off-by: DPatti88 <patricia.nilsson@iths.se>